kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enterprise-ingress
  namespace: enterprise-app
spec:
  ingressClassName: nginx
  rules:
    - host: enterprise.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000

          - path: /chat
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
